# burn-benches

./: .gitignore  Cargo.toml  README.md
benches/: conv2d.rs  mlp.rs
src/: bench.rs  cli.rs  lib.rs  main.rs  mlp.rs  tables.rs
src/benches/: conv2.rs  conv2d.rs  mlp.rs  mod.rs  transformer.rs
